--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 /* CSS RESET STARTS HERE */
 
 /* 1. Use a more-intuitive box-sizing model */
@@ -67,4 +69,13 @@ h1, h2, h3, h4, h5, h6 {
     "header"
     "main"
     "footer";
+  font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+  color: #333;
+  background-image: 
+  linear-gradient(rgb(148, 98, 148), rgb(68, 48, 68));
 }
