--- a/src/pages/Shop/Shop.module.css
+++ b/src/pages/Shop/Shop.module.css
@@ -1,5 +1,30 @@
 .shopItems {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 10px;
+    gap: 20px;
+}
+
+.shopItem {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16px;
+  border: 2px solid rgb(150, 100, 60);
+  border-radius: 10px;
+  background-color: rgb(250, 240, 230);
+  box-shadow: 3px 3px 12px rgb(150, 150, 150);
+  img {
+    max-width: 300px;
+    max-height: 300px;
+    transition: scale 0.3s ease-out;
+  }
+}
+
+.shopItem:hover {
+  border: 2px solid rgb(200, 150, 90);
+  background-color: rgb(255, 250, 245);
+  img {
+    scale: 1.03;
+  }
 }
