--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,6 +1,7 @@
 h1 a {
   text-decoration: none;
-  color: #e3e3e3;
+  color: whitesmoke;
+  text-shadow: 0 0 20px rgb(200, 150, 90);
 }
 
 .navTitle {
@@ -8,7 +9,7 @@ h1 a {
   font-family: "Great Vibes", cursive;
   font-weight: 400;
   font-style: normal;
-  font-size: 5rem;
+  font-size: clamp(2.5rem, 5vw, 5rem);
 }
 
 .navBar {
@@ -29,7 +30,7 @@ h1 a {
 .navCart {
   display: flex;
   text-decoration: none;
-  color: #e3e3e3;
+  color: whitesmoke;
   font-size: 3rem;
   transition: 
     scale 0.3s ease-out;
